--- a/RT.html
+++ b/RT.html
@@ -116,7 +116,7 @@ background-color:cornflowerblue;
         <li><a class="active" href="index.html">HOME</a></li>
         <li><a href="aboutus_rt.html">ABOUT US</a></li>
         <li><a href="club_coordinators.html">CO-ORDINATORS</a></li>
-        <li><a href="events_rt.html">EVENTS</a></li>
+        <li><a href="events.html">EVENTS</a></li>
         <li><a href="contactus.html">CONTACT US</a></li>
       </ul>
     </nav>
