--- a/rooms_club.html
+++ b/rooms_club.html
@@ -30,11 +30,12 @@
     <script>
           function disableBtn() {
             document.getElementById("myBtn").disabled = true;
-            alert("room booked");
+            alert("room booked successfully");
           }
           
           function enableBtn() {
             document.getElementById("myBtn").disabled = false;
+              alert("your event is finished and booked time is completed");
           }
     </script>
     <body>
@@ -52,14 +53,12 @@
    <h2>room 111</h2>
     </div>
     <span><button class="button" id="myBtn" onclick="disableBtn()">book room</button>
-        <button class="button" onclick="enableBtn()">event finished</button></span>
   </div>
   <div class="column">
     <div class="card">
    <h2>room 112</h2>
     </div>
     <span><button class="button" id="myBtn" onclick="disableBtn()">book room</button>
-        <button class="button" onclick="enableBtn()">event finished</button></span>
   </div>
       </div>
       <div class="row">
@@ -68,21 +67,18 @@
          <h2>room 113</h2>
           </div>
           <span><button class="button" id="myBtn" onclick="disableBtn()">book room</button>
-            <button class="button" onclick="enableBtn()">event finished</button></span>
         </div>
         <div class="column">
           <div class="card">
          <h2>room 114</h2>
           </div>
           <span><button class="button" id="myBtn" onclick="disableBtn()">book room</button>
-            <button class="button" onclick="enableBtn()">event finished</button></span>
         </div>
         <div class="column">
           <div class="card">
          <h2>room 115</h2>
           </div>
           <span><button class="button" id="myBtn" onclick="disableBtn()">book room</button>
-            <button class="button" onclick="enableBtn()">event finished</button></span>
         </div>
             </div>
             <div class="row">
@@ -91,21 +87,18 @@
                  <h2>room 116</h2>
                   </div>
                   <span><button class="button" id="myBtn" onclick="disableBtn()">book room</button>
-                    <button class="button" onclick="enableBtn()">event finished</button></span>
                 </div>
                 <div class="column">
                   <div class="card">
                  <h2>room 117</h2>
                   </div>
                   <span><button class="button" id="myBtn" onclick="disableBtn()">book room</button>
-                    <button class="button" onclick="enableBtn()">event finished</button></span>
                 </div>
                 <div class="column">
                   <div class="card">
                  <h2>room 118</h2>
                   </div>
                   <span><button class="button" id="myBtn" onclick="disableBtn()">book room</button>
-                    <button class="button" onclick="enableBtn()">event finished</button></span>
                 </div>
                     </div>
                      
